Fix Fron-End Movile

--- a/coachings.html
+++ b/coachings.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -66,13 +67,13 @@
       </section>
       <section class="coachings-2 container list-menu">
         <div class="row d-flex justify-content-center">
-          <div class="col-12">
+          <div class="col-11">
             <p><a href="index.html">Startseite / </a> Coachings</p>
           </div>
         </div>
       </section>
       <section class="coachings-3 container">
-        <div class="row justify-content-center seminar-post">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-down">
           <div class="col-md-10 col-12">
             <h2>Coachings</h2>
             <span class="border-green"></span>
@@ -81,7 +82,7 @@
             In ausführlichen Gesprächen im Vorfeld des Coachings kläre ich mit Ihnen, was sich nach dem Coaching ändern soll. Auf dieser Grundlage entwickle ich <b>maßgeschneiderte Lösungen für Sie.</b></p>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post" style="border: 0;">
+        <div class="row justify-content-center seminar-post" style="border: 0;" data-aos="zoom-in-up">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/alex-perez-AIfbUyzhKz0-unsplash.jpg);"></div>
             <h2>Individueller für Sie abgestimmt</h2>
@@ -187,6 +188,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
