--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -95,9 +96,9 @@
                 </div>
             </div>
         </section>
-        <section class="home-2 container">
+        <section class="home-2 container" data-aos="fade-up">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-10 col-12">
+                <div class="col-md-10 col-11">
                     <h2>Office- und Zeitmanagement</h2>
                     <span class="border-green"></span>
                     <p>
@@ -110,7 +111,7 @@
                         Zufriedene Mitarbeiter arbeiten konzentrierter und fokussierter an den Unternehmens- und persönlichen Zielen. Durch die Zufriedenheit steigt die Verbundenheit zum Unternehmen. Und der positive Nebeneffekt – Es bleibt mehr Zeit:
                     </p>
                 </div>
-                <div class="col-md-10 col-12">
+                <div class="col-md-10 col-11">
                     <div class="row d-flex justify-content-between">
                         <div class="col-md-3 icon-container">
                             <img src="images/icon-1.jpg" alt="">
@@ -135,9 +136,9 @@
           <div class="cover-black"></div>
           <div class="container">
             <div class="row align-content-center justify-content-center">
-              <div class="col-md-10 col-12">
+              <div class="col-md-10 col-12" data-aos="fade-up">
                 <p class="big-p">
-                  „Sollen wir ein<br> 
+                  „Sollen wir ein
                   Stück des Weges 
                   gemeinsam gehen?“
                 </p>
@@ -148,13 +149,13 @@
         </section>
         <section class="home-4 container">
           <div class="row justify-content-center">
-            <div class="col-md-5 col-12">
+            <div class="col-md-5 col-12" data-aos="fade-up-right">
               <h2>Seminare</h2>
               <span class="border-green"></span>
               <p>Meine Inhouse-Seminare verfolgen das Ziel durch klare Strukturen die Gesamtleistung des Teams effizienter und effektiver zu gestalten. Gemeinsam mit einer Gruppe von Mitarbeitenden oder einem Team ein und derselben Organisationseinheit entwickele ich Strategien für die individuelle Arbeitsorganisation, die sich nahtlos in kooperative Organisationsformen im Gesamtprozess einfügen.</p>
               <a href="" class="button-green"><img src="images/next.svg" alt="">Zu den Seminaren</a>
             </div>
-            <div class="col-md-5 col-12">
+            <div class="col-md-5 col-12" data-aos="fade-up-left">
               <h2>Coachings</h2>
               <span class="border-green"></span>
               <p>Zeit ist die einzige Ressource, die Sie nicht vermehren können. Sie können aber den Umgang und die Nutzung der Zeit optimieren. Wenn Sie konsequent Ihre festgelegten Ziele verfolgen und Ihre Aufgaben richtig priorisieren und strukturieren, haben Sie den Grundstein für ein optimales Zeit- und Selbstmanagement gelegt. In den speziell für Sie angepassten Coachings wird auf genau diese Probleme  und Aufgaben eingegangen.</p>
@@ -164,21 +165,21 @@
         </section>
         <section class="home-5 container">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-10 col-12">
-                    <h2>Meine Visionen …</h2>
+                <div class="col-md-10 col-11">
+                    <h2 data-aos="fade-right">Meine Visionen …</h2>
                     <span class="border-green"></span>
                     <div class="row d-flex justify-content-between">
-                        <div class="col-md-4 icon-container">
+                        <div class="col-md-4 icon-container" data-aos="fade-down">
                             <img src="images/icon-3.jpg" alt="">
                             <h3>Fürs Wesentliche</h3>
                             <p>Sie können Ihre beruflichen und privaten Potenziale wieder voll ausschöpfen, erzielen bessere Arbeitsergebnisse und haben am Ende eines jeden Tages Grund, mit ihrem Tun zufrieden zu sein und Zeit für Familie und Hobbies übrig.</p>
                         </div>
-                        <div class="col-md-4 icon-container">
+                        <div class="col-md-4 icon-container" data-aos="fade-up">
                             <img src="images/icon-4.jpg" alt="">
                             <h3>Für Familie & Freunde</h3>
                             <p>Ihre Mitarbeiter nehmen ihr Zeitmanagement selbst produktiv in die Hand, erleben ihre Arbeit als inspirierend und erhöhen die Produktivität des Unternehmens. Die Arbeitsprozesse sind klar definiert und das Warum ist für jedes Teammitglied ersichtlich.</p>
                         </div>
-                        <div class="col-md-4 icon-container">
+                        <div class="col-md-4 icon-container" data-aos="fade-down">
                             <img src="images/icon-5.jpg" alt="">
                             <h3>Für Sie selbst</h3>
                             <p>Ihr Weg geht über mein Arbeitsplatz-Coaching und meine Seminare, in denen Sie lernen Strategien für eine produktive Zeitkultur zu entwickeln. Sie lernen einen effizienten Umgang mit Ihrer Ressource Zeit. Durch perfekte Arbeitsorganisation gehen Sie kräftesparend mit Ihrer Zeit und Ihren Aufgaben um und verlieren nie Ihre Ziele aus den Augen.</p>
@@ -190,7 +191,7 @@
         <section class="home-6">
           <div class="container">
             <div class="row align-items-center">
-              <div class="offset-md-1 col-md-8 col-12">
+              <div class="offset-md-1 col-md-8 col-12" data-aos="fade-up">
                 <h2>Stefanie Plum</h2>
                 <span class="border-green"></span>
                 <p>
@@ -203,16 +204,16 @@
         </section>
         <section class="home-7 container">
           <div class="row justify-content-center">
-            <div class="col-md-10 col-12 tree-columns tree-columns-2">
+            <div class="col-md-10 col-11 tree-columns tree-columns-2" data-aos="zoom-in">
               <div class="row align-items-center d-flex">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-12">
                   <img src="images/logo-transparent.png" alt="">
                 </div>
-                <div class="col-md-6 col-8">
+                <div class="col-md-6 col-12">
                   <h3>Ist Ihr Interesse geweckt?</h3>
                   <p>Lorem ipsum dolor sit amet, consetetur sadip, diam nonumy tempor invidunt ut labore.</p>
                 </div>
-                <div class="col-md-4 col-12 text-right">
+                <div class="col-md-4 col-12 text-md-right">
                   <a href="" class="button-green"><img src="images/next.svg" alt="">Zu den Seminaren</a>
                 </div>
               </div>
@@ -222,10 +223,10 @@
         <section class="home-8 container">
           <div class="row d-flex justify-content-center">
             <div class="col-md-10 col-12">
-              <h2>Blog</h2>
+              <h2 data-aos="fade-right">Blog</h2>
               <span class="border-green"></span>
             </div>
-            <div class="col-md-10 col-12 blog-list-three blog-list">
+            <div class="col-md-10 col-12 blog-list-three blog-list" data-aos="zoom-in-up">
               <div class="row">
                 <div class="col-md-4 col-12">
                   <div class="blog-content-post">
@@ -297,6 +298,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
