--- a/seminare.html
+++ b/seminare.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -58,7 +59,7 @@
         <div class="cover-black"></div>
         <div class="container">
           <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-md-10 col-12">
+            <div class="col-md-10 col-10">
               <h1>Seminare</h1>
             </div>
           </div>
@@ -66,7 +67,7 @@
       </section>
       <section class="seminare-2 container list-menu">
         <div class="row d-flex justify-content-center">
-          <div class="col-12">
+          <div class="col-md-12 col-11">
             <p><a href="index.html">Startseite / </a> Seminare</p>
           </div>
         </div>
@@ -74,12 +75,12 @@
       <section class="seminare-3 container">
         <div class="row justify-content-center seminar-post">
           <div class="col-md-10 col-12">
-            <h2>Stefanie Plum</h2>
+            <h2 data-aos="zoom-in-up" data-aos="fade-right">Stefanie Plum</h2>
             <span class="border-green"></span>
-            <p>In meine Seminaren lernen Sie effektive Methoden für effizientes Zeitmangement und optimales Selbstmanagement. <b>Der Begriff Seminar kommt von „säen“.</b> Und genau diesen Ansatz vertrete ich. In meinen Seminaren werden neue Denkansätze und Herangehensweisen gesät. Denn jede Änderung, sei es am Arbeitsplatz selbst, in den Selbststeuerung oder mit unserer Zeit, beginnt im Kopf. Dabei achte ich darauf, dass ich verschiedenes „Saatgut“ in die jeweilige Gruppe einstreue, damit jeder Seminarteilnehmer für sich die idealen Denk- und Veränderungsansätze weiterverfolgt. Gerade die Lernumgebung in einer kleinen Gruppe ist ideal, um interaktiv Wissen zu erwerben. Auch können neue Verhaltensweisen ausprobiert und alte Denkmuster umgedeutet werden. Wir behalten stets den Fokus auf das Selbstmanagement, denn dieser ermöglicht Optimierungen im Zeit- und Officemanagement.</p>
+            <p data-aos="fade-left">In meine Seminaren lernen Sie effektive Methoden für effizientes Zeitmangement und optimales Selbstmanagement. <b>Der Begriff Seminar kommt von „säen“.</b> Und genau diesen Ansatz vertrete ich. In meinen Seminaren werden neue Denkansätze und Herangehensweisen gesät. Denn jede Änderung, sei es am Arbeitsplatz selbst, in den Selbststeuerung oder mit unserer Zeit, beginnt im Kopf. Dabei achte ich darauf, dass ich verschiedenes „Saatgut“ in die jeweilige Gruppe einstreue, damit jeder Seminarteilnehmer für sich die idealen Denk- und Veränderungsansätze weiterverfolgt. Gerade die Lernumgebung in einer kleinen Gruppe ist ideal, um interaktiv Wissen zu erwerben. Auch können neue Verhaltensweisen ausprobiert und alte Denkmuster umgedeutet werden. Wir behalten stets den Fokus auf das Selbstmanagement, denn dieser ermöglicht Optimierungen im Zeit- und Officemanagement.</p>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-up">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/paula-may-AJqeO_-ifx0-unsplash.jpg);"></div>
             <h2>Zeit- und Selbstmanagement</h2>
@@ -109,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-up">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/thong-vo-Maf7wdHCmvo-unsplash.jpg);"></div>
             <h2>Effizient im digitalen Büro</h2>
@@ -137,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-up">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/patrick-perkins-ETRPjvb0KM0-unsplash.jpg);"></div>
             <h2>Officemanagement – ich habe mein Büro im Griff</h2>
@@ -166,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-up">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/ella-jardim-NEuFnhGeDDc-unsplash.jpg);"></div>
             <h2>Erfolgreich arbeiten im Home-Office</h2>
@@ -194,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center seminar-post" style="border: none">
+        <div class="row justify-content-center seminar-post" data-aos="zoom-in-up" style="border: none">
           <div class="col-md-10 col-12">
             <div class="seminar-img" style="background-image: url(images/austin-distel-wD1LRb9OeEo-unsplash.jpg);"></div>
             <h2>Zeit- und Selbstmanagement für Auszubildende und Ausbilder</h2>
@@ -218,10 +219,10 @@
       <section class="seminare-4 container">
           <div class="row d-flex justify-content-center">
             <div class="col-md-10 col-12">
-              <h2>Blog</h2>
+              <h2 data-aos="fade-right">Blog</h2>
               <span class="border-green"></span>
             </div>
-            <div class="col-md-10 col-12 blog-list-three blog-list">
+            <div class="col-md-10 col-12 blog-list-three blog-list" data-aos="zoom-in-up">
               <div class="row">
                 <div class="col-md-4 col-12">
                   <div class="blog-content-post">
@@ -293,6 +294,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
