--- a/uber-mich.html
+++ b/uber-mich.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -66,13 +67,13 @@
       </section>
       <section class="uber-2 container list-menu">
         <div class="row d-flex justify-content-center">
-          <div class="col-12">
+          <div class="col-11">
             <p><a href="index.html">Startseite / </a> Uber Mich</p>
           </div>
         </div>
       </section>
       <section class="uber-3 container">
-        <div class="row justify-content-center seminar-post" style="border: none;">
+        <div class="row justify-content-center seminar-post" style="border: none;" data-aos="zoom-in-down">
           <div class="col-md-10 col-12">
             <h2>Stefanie Plum</h2>
             <span class="border-green"></span>
@@ -85,7 +86,7 @@
           <div class="container">
             <div class="row align-content-center justify-content-center">
               <div class="col-md-10 col-12">
-                <p class="big-p">
+                <p class="big-p" data-aos="zoom-in-up">
                   „Es gibt Wichtigeres<br> im Leben, als beständig dessen Geschwindigkeit zu erhöhen.“
                 </p>
                 <p class="stefanie-plum">Mahatma Gandhi</p>
@@ -96,7 +97,7 @@
       <section class="uber-3 container">
         <div class="row justify-content-center seminar-post" style="border: none;">
           <div class="col-md-10 col-12">
-            <ul class="list-green">
+            <ul class="list-green" data-aos="fade-left">
               <p><b>Im Detail:</b></p>
               <li>Geboren 1977 in Bad Neuenahr</li>
               <li>Ausbildung zur Bankkauffrau bei der Sparkasse Bonn</li>
@@ -104,7 +105,7 @@
               <li>Management-Trainee mit dem Schwerpunkt Personalentwicklung und Ausbilderin bei Bosch und Siemens Hausgeräte GmbH (B/S/H)</li>
               <li>Personalbetreuerin im Deutschen Zentrum für Luft- und Raumfahrt e.V. (DLR)</li>
             </ul>
-            <ul class="list-green">
+            <ul class="list-green" data-aos="fade-left">
               <p><b>Fortbildungen:</b></p>
               <li>Qualifizierung zum Trainer „Train the Trainer“</li>
               <li>Qualifizierung zur Ausbilderin lt. Ausbildereignungsverordnung</li>
@@ -121,7 +122,7 @@
           <div class="col-md-10 col-12">
             <p><b>Was privat meine Akkus wieder auflädt:</b></p>
             <div class="row">
-              <div class="col-md-4 col-12">
+              <div class="col-md-4 col-12" data-aos="fade-left">
                 <div class="uber-container">
                   <div class="uber-image" style="background-image: url(images/IMG_20190722_153731.JPG);"></div>
                   <h3>Familie und Freunde</h3>
@@ -130,7 +131,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-4 col-12" data-aos="fade-up">
                 <div class="uber-container">
                   <div class="uber-image" style="background-image: url(images/alan-j-hendry-idWZldBFQ8U.jpg);"></div>
                   <h3>Reisen und Bewegung</h3>
@@ -139,7 +140,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-4 col-12" data-aos="fade-right">
                 <div class="uber-container">
                   <div class="uber-image" style="background-image: url(images/ben-white-1zA_mC846yU-unsplash.jpg);"></div>
                   <h3>Ich-Zeit</h3>
@@ -156,7 +157,7 @@
       <section class="uber-7">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-10 col-12 tree-columns">
+            <div class="col-md-10 col-12 tree-columns" data-aos="zoom-in">
               <div class="row align-items-center d-flex justify-content-center">
                 <div class="col-md-3 col-4 text-right">
                   <img src="images/logo-transparent.png" alt="">
@@ -252,6 +253,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
