--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -75,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="blog-3 container">
+        <section class="blog-3 container" data-aos="zoom-in">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-12 blog-list blog-one">
                     <div class="blog-content-post">
@@ -114,7 +115,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-10 col-12 blog-list">
                     <div class="row container-mix">
-                        <div class="col-md-4 col-12 mix seminar-category">
+                        <div class="col-md-4 col-12 mix seminar-category" data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/luke-chesser-rCOWMC8qf8A-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -124,7 +125,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix coaching-category">
+                        <div class="col-md-4 col-12 mix coaching-category"  data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -134,7 +135,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix info-category">
+                        <div class="col-md-4 col-12 mix info-category" data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/dawid-zawila-zb2vBaHYB2I-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -144,7 +145,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix seminar-category">
+                        <div class="col-md-4 col-12 mix seminar-category"  data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/annie-spratt-QckxruozjRg-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -154,7 +155,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix coaching-category">
+                        <div class="col-md-4 col-12 mix coaching-category" data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/dylan-gillis-KdeqA3aTnBY-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -164,7 +165,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix info-category">
+                        <div class="col-md-4 col-12 mix info-category" data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/headway-5QgIuuBxKwM-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -174,7 +175,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-12 mix seminar-category">
+                        <div class="col-md-4 col-12 mix seminar-category" data-aos="zoom-in">
                             <div class="blog-content-post">
                                 <div class="content-image-blog" style="background-image: url(images/austin-distel-wD1LRb9OeEo-unsplash.jpg)"></div>
                                 <div class="container-post-info">
@@ -191,16 +192,16 @@
         <section class="blog-7">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-md-10 col-12 tree-columns">
+                    <div class="col-md-10 col-12 tree-columns" data-aos="zoom-in">
                         <div class="row align-items-center d-flex justify-content-center">
-                            <div class="col-md-3 col-4 text-right">
+                            <div class="col-md-3 col-11 text-md-right">
                                 <img src="images/logo-transparent.png" alt="">
                             </div>
-                            <div class="col-md-5 col-8">
+                            <div class="col-md-5 col-11">
                                 <h3>Ist Ihr Interesse geweckt?</h3>
                                 <p class="m-0">Lorem ipsum dolor sit amet, consetetur sadip, diam nonumy tempor invidunt ut labore.</p>
                             </div>
-                            <div class="col-md-4 col-12">
+                            <div class="col-md-4 col-11">
                                 <a href="" class="button-green"><img src="images/next.svg" alt="">Zu den Seminaren</a>
                             </div>
                         </div>
@@ -246,6 +247,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="https://demos.kunkalabs.com/mixitup/mixitup.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
