--- a/kontakt.html
+++ b/kontakt.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -66,7 +67,7 @@
       </section>
       <section class="kontakt-2 container list-menu">
         <div class="row d-flex justify-content-center">
-          <div class="col-12">
+          <div class="col-11">
             <p><a href="index.html">Startseite / </a> Kontakt</p>
           </div>
         </div>
@@ -111,7 +112,7 @@
           <div class="container">
             <div class="row align-content-center justify-content-center">
               <div class="col-md-10 col-12">
-                <p class="big-p">
+                <p class="big-p"  data-aos="zoom-in">
                   „Mit der Zeit<br>
                   wird Ihre Zeit immer 
                   wichtiger.“
@@ -122,7 +123,7 @@
           </div>
       </section>
       <section class="home-8 container">
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center"  data-aos="zoom-in">
             <div class="col-md-10 col-12">
               <h2>Blog</h2>
               <span class="border-green"></span>
@@ -199,6 +200,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
