--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <title>Zeitguthaben</title>
 </head>
 
-<body class="footer-page">
+<body>
     <header>
         <div class="container">
             <div class="row">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-         <section class="blog-5 container">
+        <section class="blog-5 container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-12">
                     <div class="form-check form-check-inline">
